--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
     </section>
      <!--About end-->
      <!--icon start-->
-     <section>
+     <section class="section">
          <div>
              <h1 class="icon-text">At Your Service</h1>
              <hr class="hr-icon">
          </div>
          <div class="wrapper">
+             <div class="sec-text">
              <div class="icon"><i class="fas fa-gem"></i>
             <h1>Sturdy Themes</h1>
             <p>Our themes are updated <br> regularly to keep them bug free!</p></div>
@@ -80,9 +81,15 @@
              <div class="icon"><i class="fas fa-heart"></i>
                 <h1>Made with Love</h1>
                 <p>Is it really open source if it's not<br>  made with love?</div>
+                </div>
          </div>
      </section>
      <!--icon end-->
+     <div style="clear:both"></div>
+
+     <div class="transform">
+         <img src="1.jpg" alt="1">
+     </div>
      
 </body>
 
